--- a/index.html
+++ b/index.html
@@ -72,7 +72,17 @@
     <div class="full-screen">
         <section id="about">
             <h2>О процессе судопроизводства</h2>
-            <p>Здесь вы можете узнать подробности о процессе судопроизводства и его этапах. Мы предоставляем информацию о том, как работает судебная система и какие правила и процедуры применяются в судопроизводстве.</p>
+            <p>Судопроизводство - это процесс разрешения юридических споров между сторонами через участие суда. Оно включает в себя несколько этапов:
+
+1. **Предварительное разбирательство**: Стороны представляют свои аргументы и доказательства перед судьей или арбитром.
+
+2. **Судебное разбирательство**: Суд рассматривает доводы сторон и выносит решение на основе применяемого права и фактов дела.
+
+3. **Апелляция**: В случае несогласия с решением суда, стороны могут обжаловать его в вышестоящий суд.
+
+4. **Исполнение решения**: После окончательного решения суда, стороны должны выполнить его.
+
+Судопроизводство регулируется законом, и его процесс может различаться в разных юрисдикциях и в зависимости от типа дела (уголовное, гражданское, административное и т. д.). Важно соблюдать правила и процедуры судопроизводства для защиты своих прав и интересов.</p>
         </section>
     </div>
 
